# sidetracked

./: Cargo.toml  LICENSE  Makefile  README.md
articles/: 2024-04-10-setting-up-the-project.md  2024-04-10-sidetracked-introducing-the-project-and-getting-setup.md  2024-04-10_sidetracked-introducing-the-project-and-getting-setup.md  2024-04-12_sidetracked-our-first-route-and-test.md  2024-04-15_sidetracked-introducing-jwt-authentication.md  2024-04-16_sidetracked-creating-a-todo.md
rendered/articles/: 2024-04-10-setting-up-the-project.md  2024-04-10-sidetracked-introducing-the-project-and-getting-setup.md  2024-04-10_sidetracked-introducing-the-project-and-getting-setup.md  2024-04-12_sidetracked-our-first-route-and-test.md  2024-04-15_sidetracked-introducing-jwt-authentication.md
sidetracked/: Cargo.toml
sidetracked/src/: lib.rs  main.rs
sidetracked/src/web/: application.rs  auth.rs  handlers.rs  mod.rs
sidetracked/tests/: routes.rs
sidetracked/tests/helpers/: mod.rs
