# @<cargotomlsidetracked
[package]
name = "sidetracked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# @<s/cargotomllibandbin
[lib]
path = "src/lib.rs"
name = "sidetracked_lib"

[[bin]]
path = "src/main.rs"
name = "sidetracked"
# >@

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "json",
  "chrono",
] }

[dev-dependencies]
axum-test = "14.8.0"
# >@
